cleaned the main notebook

--- a/notebooks/scalp_demo_2.ipynb
+++ b/notebooks/scalp_demo_2.ipynb
@@ -20,7 +20,17 @@
     "from scalp.output import draw\n",
     "import lmz\n",
     "import numpy as np\n",
-    "\n"
+    "\n",
+    "import scanpy as sc\n",
+    "from scalp import graph as sgraph\n",
+    "from scipy.sparse import csr_matrix\n",
+    "import scalp.data.similarity as sim\n",
+    "import umap\n",
+    "import pandas as pd\n",
+    "import scalpdemo   \n",
+    "import ubergauss.tools as ut\n",
+    "from lmz import *\n",
+    "import functools "
    ]
   },
   {
@@ -59,23 +69,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scalpdemo\n",
     "\n",
     "datasets, dataset = scalpdemo.get_data()\n",
-    "\n",
-    "# conf = {'maxdatasets':10, 'maxcells':1000,'filter_clusters': 15}\n",
-    "# if True:\n",
-    "#     datasets = list(scalp.data.scmark(scalp.test_config.scmark_datapath,  **conf))\n",
-    "#     datasets += list(scalp.data.timeseries(scalp.test_config.timeseries_datapath,**conf))\n",
-    "#     datasets +=list(scalp.data.scib(scalp.test_config.scib_datapath,**conf))\n",
-    "#     dataset = datasets[12]\n",
-    "# else:\n",
-    "#     datasets = list(scalp.data.timeseries(scalp.test_config.timeseries_datapath,datasets = ['s5'],**conf))\n",
-    "#     dataset = datasets[0]\n",
-    "# \n",
-    "\n",
-    "# datasets = list(scalp.data.scib(scalp.test_config.scib_datapath,  maxdatasets=3,  maxcells = 500 ))\n",
-    "# timeseries 1 is difficult for others!!!!!!!!!!!!!!!!!\n"
+    "\n"
    ]
   },
   {
@@ -93,19 +89,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scanpy as sc\n",
-    "\n",
-    "'''\n",
-    "def scanorama(dataset, dim = 2):\n",
-    "    dataset = scalp.pca.pca(dataset)\n",
-    "    dataset = scalp.mnn.scanorama(dataset)\n",
-    "    [ds.obsm.pop('umap', None)for ds in dataset]\n",
-    "    scalp.umapwrap.adatas_umap(dataset, label ='umap', from_obsm ='scanorama', dim= dim)\n",
-    "    return scalp.transform.stack(dataset)\n",
-    "st = scanorama(dataset)\n",
-    "sc.pl.umap(st, color=['batch', 'label'])\n",
-    "'''\n",
-    "\n",
     "st = scalp.mnn.scanorama(dataset) \n",
     "scalp.plot(st,'scanorama', color=['batch','label'])\n"
    ]
@@ -126,23 +109,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "import scanpy as sc\n",
     "\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "def umaponly(dataset,dim=2):\n",
-    "    dataset = scalp.pca.pca(dataset)\n",
-    "    [ds.obsm.pop('umap', None)for ds in dataset]\n",
-    "    scalp.umapwrap.adatas_umap(dataset, label ='umap', from_obsm ='pca40', dim =dim)\n",
-    "    return scalp.transform.stack(dataset)\n",
-    "stack = umaponly(dataset)\n",
-    "sc.pl.umap(stack, color=['batch', 'label'])\n",
-    "'''  \n",
-    "\n",
-    "\n",
-    "# st = scalp.mnn.umaponly(dataset, dim=2)\n",
-    "# st.obsm['umaponly'] = st.obsm['']\n",
     "scalp.plot(st,'pca40', color=['batch','label'])"
    ]
   },
@@ -162,20 +129,6 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "import scanpy as sc\n",
-    "\n",
-    "'''\n",
-    "def bbknn(dataset, dim = 2):\n",
-    "    dataset = scalp.pca.pca(dataset)\n",
-    "    [ds.obsm.pop('umap', None)for ds in dataset]\n",
-    "    dataset = scalp.mnn.bbknnwrap(dataset, dim = dim)\n",
-    "    stack = scalp.transform.stack(dataset)\n",
-    "    return stack\n",
-    "\n",
-    "stack = bbknn(dataset)\n",
-    "sc.pl.umap(stack, color=['batch', 'label'])\n",
-    "'''\n",
-    "\n",
     "st = scalp.mnn.bbknnwrap(dataset, dim =2) \n",
     "scalp.plot(st,'bbknn', color=['batch','label'])"
    ]
@@ -196,17 +149,6 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "import scanpy as sc\n",
-    "'''\n",
-    "def combat(dataset, dim = 2):\n",
-    "    [ds.obsm.pop('umap', None)for ds in dataset]\n",
-    "    dataset = scalp.mnn.combat(dataset)\n",
-    "    scalp.umapwrap.adatas_umap(dataset, label ='umap', from_obsm ='combat', dim =dim)\n",
-    "    return scalp.transform.stack(dataset)\n",
-    "stack= combat(dataset)\n",
-    "sc.pl.umap(stack, color=['batch', 'label'])\n",
-    "'''\n",
-    "\n",
     "\n",
     "st = scalp.mnn.combat(dataset) \n",
     "scalp.plot(st,'combat', color=['batch','label'])"
@@ -228,12 +170,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "import scanpy as sc\n",
-    "from scalp import graph as sgraph\n",
-    "from scipy.sparse import csr_matrix\n",
-    "import scalp.data.similarity as sim\n",
-    "import umap\n",
-    "import pandas as pd\n",
+    "\n",
     "\n",
     "\n",
     "Scalp = scalpdemo.Scalp\n",
@@ -267,9 +204,7 @@
     "##############\n",
     "\n",
     "if True:\n",
-    "    import ubergauss.tools as ut\n",
-    "    from lmz import *\n",
-    "    import functools \n",
+    "\n",
     "    \n",
     "    \n",
     "    funcs = [scalp.mnn.scanorama, scalp.mnn.bbknnwrap, scalp.mnn.combat] \n",
@@ -353,7 +288,6 @@
     "\n",
     "# THIS NEEDS TO BE TESTED BUT WE RLY NEED THIS:\n",
     "datasets, fnames, runtimes =  scalpdemo.run_all(datasets)\n",
-    "\n",
     "runtimes"
    ]
   },
@@ -381,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if True: # this is super slow\n",
+    "if False: # this is super slow\n",
     "    scores_kni = { str(i): scalp.score.kni_scores(datasets[i], projection='methods') for i in lmz.Range(datasets) }\n",
     "    dff = pd.DataFrame.from_dict(scores_kni, orient='index')\n",
     "    average_scores = dff.mean().to_latex()\n",
@@ -437,7 +371,7 @@
     "\\end{tabular}\n",
     "\n",
     "\n",
-    "big, no filter:\n",
+    "big, no filter, \n",
     "\\begin{tabular}{lr}\n",
     "\\toprule\n",
     " & 0 \\\\\n",
@@ -454,6 +388,26 @@
     "Scalp: 0.75 & 0.477145 \\\\\n",
     "Scalp: 0.85 & 0.455892 \\\\\n",
     "Scalp: 0.95 & 0.503966 \\\\\n",
+    "\\bottomrule\n",
+    "\\end{tabular}\n",
+    "\n",
+    "# big filter 15\n",
+    "\\begin{tabular}{lr}\n",
+    "\\toprule\n",
+    " & 0 \\\\\n",
+    "\\midrule\n",
+    "scanorama & 0.697316 \\\\\n",
+    "bbknn & 0.730277 \\\\\n",
+    "combat & 0.515334 \\\\\n",
+    "Scalp: 0.15 & 0.683468 \\\\\n",
+    "Scalp: 0.25 & 0.656524 \\\\\n",
+    "Scalp: 0.35 & 0.631032 \\\\\n",
+    "Scalp: 0.45 & 0.607354 \\\\\n",
+    "Scalp: 0.55 & 0.573127 \\\\\n",
+    "Scalp: 0.65 & 0.535592 \\\\\n",
+    "Scalp: 0.75 & 0.497753 \\\\\n",
+    "Scalp: 0.85 & 0.475295 \\\\\n",
+    "Scalp: 0.95 & 0.519884 \\\\\n",
     "\\bottomrule\n",
     "\\end{tabular}\n",
     "'''\n",
@@ -499,69 +453,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17c351c5-3a4e-414d-b1f2-43dddaa1ed00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from scipy.stats import gmean\n",
-    "\n",
-    "def compute_method_ranks(data, methods):\n",
-    "    if not data:\n",
-    "        return 0\n",
-    "    rows = []\n",
-    "    for ds, methods_dict in data.items():\n",
-    "        for meth, scores in methods_dict.items():\n",
-    "            if meth in methods:\n",
-    "                label = scores['label_mean']\n",
-    "                batch = scores['batch_mean']\n",
-    "                geo = gmean([label, batch])\n",
-    "                rows.append({'dataset': ds, 'method': meth,\n",
-    "                             'label': label, 'batch': batch, 'geomean': geo})\n",
-    "    df = pd.DataFrame(rows)\n",
-    "    \n",
-    "    # Rank within each dataset (lower rank = better)\n",
-    "    ranks = df.groupby('dataset')[['label', 'batch', 'geomean']].rank(ascending=False)\n",
-    "    df[['label_rank', 'batch_rank', 'geo_rank']] = ranks\n",
-    "    \n",
-    "    # Average ranks per method\n",
-    "    avg_ranks = df.groupby('method')[['label_rank', 'batch_rank', 'geo_rank']].mean()\n",
-    "    return avg_ranks\n",
-    "\n",
-    "base = fnames[:3]\n",
-    "for e in fnames[3:]:\n",
-    "    ffnames = base.copy()+[e]\n",
-    "    zzzz = compute_method_ranks(scores, ffnames)\n",
-    "    print(zzzz)\n",
-    "\n",
-    "# all the methods\n",
-    "print('########### ALL #######')\n",
-    "print(compute_method_ranks(scores, fnames))\n",
-    "# ts = false\n",
-    "print('############## batch #############')\n",
-    "scores_tsf = [ str(i) for i,e in enumerate(datasets) \n",
-    "                if not datasets[i].uns.get('timeseries',False) ]\n",
-    "scores_tsf = {k:scores[k] for k in scores_tsf}\n",
-    "print(compute_method_ranks(scores_tsf, fnames))\n",
-    "# ts = true \n",
-    "print('########## time series ##########')\n",
-    "scores_ts = [ str(i) for i,e in enumerate(datasets) if datasets[i].uns.get('timeseries',False)    ]\n",
-    "scores_ts = {k:scores[k] for k in scores_ts}\n",
-    "print(compute_method_ranks(scores_ts, fnames))\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4bd36544-ef11-4fb0-bcfa-26aef1a0c826",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "type(score)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -635,59 +530,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
-    "palette = {\n",
-    "        \"scanorama\": \"red\",\n",
-    "    \"bbknn\": \"green\",\n",
-    "    \"combat\": \"purple\",\n",
-    "    \"Scalp: 0.15\": \"#0b2b40\",\n",
-    "    \"Scalp: 0.25\": \"#0f3e5a\",  # Original dark blue\n",
-    "    \"Scalp: 0.35\": \"#165a87\",  # Original dark blue\n",
-    "    \"Scalp: 0.45\": \"#1f77b4\",  # Original medium blue\n",
-    "    \"Scalp: 0.55\": \"#4892c7\",\n",
-    "    \"Scalp: 0.65\": \"#73b0da\",  # Mid-point light blue\n",
-    "    \"Scalp: 0.75\": \"#a7cce5\",  # Original lighter blue\n",
-    "    \"Scalp: 0.85\": \"#dceefb\",  # Original very light blue\n",
-    "    \"Scalp: 0.95\": \"#f0f8ff\"   # AliceBlue, almost white\n",
-    "}\n",
-    "z = pd.DataFrame(scores2)\n",
-    "z = z[z.method != 'scalp']\n",
-    "\n",
-    "ax = sns.scatterplot(z,x='label_mean', y= 'batch_mean', hue = \"method\",palette = palette, legend=True)\n",
-    "ax.legend(bbox_to_anchor=(1.05, 1), loc='upper left', borderaxespad=0.)\n",
-    "plt.show()\n",
-    "z_avg = z.groupby(\"method\", as_index=False)[[\"label_mean\", \"batch_mean\"]].mean()\n",
-    "ax = sns.scatterplot(z_avg,x='label_mean', y= 'batch_mean', hue = \"method\",palette = palette, legend=True)\n",
-    "ax.legend(bbox_to_anchor=(1.05, 1), loc='upper left', borderaxespad=0.)\n",
-    "plt.show()\n",
-    "\n",
-    "z_stats = z.groupby(\"method\").agg({\n",
-    "    \"label_mean\": [\"mean\", \"std\"],\n",
-    "    \"batch_mean\": [\"mean\", \"std\"]\n",
-    "}).reset_index()\n",
-    "\n",
-    "# Flatten MultiIndex columns\n",
-    "z_stats.columns = [\"method\", \"label_mean\", \"label_std\", \"batch_mean\", \"batch_std\"]\n",
-    "\n",
-    "# Step 2: Plot with error bars\n",
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "# Scatter plot with error bars\n",
-    "for _, row in z_stats.iterrows():\n",
-    "    ax.errorbar(\n",
-    "        x=row[\"label_mean\"],\n",
-    "        y=row[\"batch_mean\"],\n",
-    "        xerr=row[\"label_std\"],\n",
-    "        yerr=row[\"batch_std\"],\n",
-    "        fmt='o', \n",
-    "        label=row[\"method\"],\n",
-    "        color=palette[row[\"method\"]] if row[\"method\"] in palette else None\n",
-    "    )\n",
-    "\n",
-    "# Customize legend\n",
-    "ax.legend(bbox_to_anchor=(1.05, 1), loc=\"upper left\", borderaxespad=0.)\n",
-    "ax.set_xlabel(\"label_mean\")\n",
-    "ax.set_ylabel(\"batch_mean\")"
+    "scalpdemo.bluestar(scores2) \n"
    ]
   },
   {
@@ -715,64 +558,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4106de27-f0cc-43df-ba49-169a2f299c9c",
+   "id": "ee553ca3-9bc9-4a89-a182-bf696fadc432",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "geomean.index.name = 'method'\n",
-    "df_melted = geomean.reset_index().melt(id_vars='method', var_name='dataset', value_name='score')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f15ab0f-7704-49b6-8150-9f4794f4b109",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dda0c3f2-1e60-4862-bc20-dea710f5fddc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_melted"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a14215e3-ed59-4b84-8892-1b7ed500127a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df_melted['group'] = np.where(df_melted.dataset.astype(int) < 13 , 'timeseries', 'batch')\n",
-    "df_melted['group'] = [ 'timeseries' if datasets[int(i)].uns['timeseries'] else 'batch'  for i in  df_melted.dataset] # np.where(df_melted.dataset.astype(int) < 13 , 'timeseries', 'batch')\n",
-    "df_melted['size'] = [ len(np.unique(datasets[int(i)].obs['batch']) ) for i in  df_melted.dataset] # np.where(df_melted.dataset.astype(int) < 13 , 'timeseries', 'batch')\n",
-    "# df_melted['group']=df_melted.dataset.astype(int) % 16\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "g = sns.catplot( data=df_melted, x=\"method\", y=\"score\", hue = 'group')# native_scale=True, zorder=1 )\n",
-    "# g = sns.catplot( data=df_melted, x=\"method\", y=\"score\", hue = 'dataset')# native_scale=True, zorder=1 )\n",
-    "#\n",
-    "\n",
-    "# Calculate mean per category\n",
-    "means = df_melted.groupby(\"method\")[\"score\"].mean()\n",
-    "\n",
-    "# Add markers for each category's mean\n",
-    "for i, day in enumerate(means.index):\n",
-    "    plt.scatter(i, means[day], color='black', marker='x', s=50, label='Mean' if i == 0 else \"\")\n",
-    "\n",
-    "g.set_xticklabels(rotation=45, labels = np.unique(df_melted.method)) # ha='right' is useful here too\n",
-    "plt.show()\n",
-    "g = sns.boxplot( data=df_melted, x=\"method\", y=\"score\", hue =\"group\")# native_scale=True, zorder=1 )\n",
-    "g.set_xticklabels(rotation=45, labels = np.unique(df_melted.method)) # ha='right' is useful here too\n",
-    "plt.show()"
+    "scalpdemo.barplot(geomean, datasets)"
    ]
   },
   {
@@ -782,6 +572,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "991a2df4-7365-481f-9389-a8b6387a55dc",
+   "metadata": {},
+   "source": [
+    "# more eval metrics, we stick to the ones above"
+   ]
   },
   {
    "cell_type": "code",
@@ -865,14 +663,6 @@
     "plt.figure(figsize=(10, 2), dpi=100)\n",
     "plt.title('Critical difference diagram of pareto dominance')\n",
     "sp.critical_difference_diagram(avg_rank, test_results)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "991a2df4-7365-481f-9389-a8b6387a55dc",
-   "metadata": {},
-   "source": [
-    "# more eval metrics, we stick to the ones above"
    ]
   },
   {
