added harmony, and adjusted all the plots, changed selected scalp values to make it look smooth on the plots

--- a/notebooks/scalp_demo_2.ipynb
+++ b/notebooks/scalp_demo_2.ipynb
@@ -85,12 +85,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab08f871-591e-4916-96ae-86fd2e2299a3",
+   "id": "4344df48-c733-48c7-b6a1-ac7a40fac4d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "st = scalp.mnn.scanorama(dataset) \n",
-    "scalp.plot(st,'scanorama', color=['batch','label'])\n"
+    "datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99c9b05e-55d5-428b-a3c7-0313f21849e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[d.uns['timeseries'] for d in datasets]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcca12d2-e77e-4238-b528-821053f2e106",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st = scalp.mnn.harmony(dataset)\n",
+    "scalp.plot(st,'Harmony', color=['batch','label'])"
    ]
   },
   {
@@ -130,7 +150,7 @@
    "source": [
     "%%time\n",
     "st = scalp.mnn.bbknnwrap(dataset, dim =2) \n",
-    "scalp.plot(st,'bbknn', color=['batch','label'])"
+    "scalp.plot(st,'BBKNN', color=['batch','label'])"
    ]
   },
   {
@@ -151,7 +171,7 @@
     "%%time\n",
     "\n",
     "st = scalp.mnn.combat(dataset) \n",
-    "scalp.plot(st,'combat', color=['batch','label'])"
+    "scalp.plot(st,'ComBat', color=['batch','label'])"
    ]
   },
   {
@@ -170,8 +190,6 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "\n",
-    "\n",
     "\n",
     "Scalp = scalpdemo.Scalp\n",
     "if True:\n",
@@ -198,51 +216,7 @@
    "id": "adaf1e67-89f7-4865-879c-8b31c62e9fc0",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#################\n",
-    "#   RUN EXPERIMENTS \n",
-    "##############\n",
-    "\n",
-    "if True:\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    funcs = [scalp.mnn.scanorama, scalp.mnn.bbknnwrap, scalp.mnn.combat] \n",
-    "    scalpvalues = [.15, .25, .35, .45, .55, .65, .75, .85, .95]\n",
-    "    for ot in scalpvalues:\n",
-    "        funcs.append( functools.partial(Scalp, ot=ot))\n",
-    "    fuid = Range(funcs)\n",
-    "    dataid = Range(datasets) \n",
-    "    tasks = [(f,d) for f in fuid for d in dataid]\n",
-    "    \n",
-    "    def run(fd):\n",
-    "        f,d = fd\n",
-    "        fun = funcs[f]\n",
-    "        dat = datasets[d]\n",
-    "        stack = fun(dat)\n",
-    "        return stack\n",
-    "        \n",
-    "    mydata = ut.xxmap(run, tasks) \n",
-    "    \n",
-    "    \n",
-    "    ################\n",
-    "    # UNIFY COLLECT DATA IN A SINGLE STRUCTURE \n",
-    "    ################\n",
-    "    fnames = 'scanorama bbknn combat'.split()\n",
-    "    fnames+=[f'Scalp: {s}' for s in scalpvalues]\n",
-    "    \n",
-    "    # datasets_stack = Map(scalp.transform.stack, datasets) \n",
-    "    for (fu,da), result in zip(tasks, mydata):\n",
-    "        method = fnames[fu]#result.uns['integrated'][0]\n",
-    "        rmeth = method\n",
-    "        if fu > 2:\n",
-    "            rmeth = 'scalp'\n",
-    "        # print(fu)\n",
-    "        datasets[da].obsm[method] = result.obsm[rmeth]\n",
-    "        datasets[da].uns.setdefault('methods', []).append(method)\n",
-    "        datasets[da].uns.setdefault('integrated', []).append(method)\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -250,13 +224,7 @@
    "id": "5445d0b7-eebb-4805-bf1e-ecc157928fcb",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "for e in datasets:\n",
-    "    if '509' in e.uns['name'] or 'lee' in e.uns['name']:\n",
-    "        scalp.plot2(e, 'bbknn', 'Scalp: 0.45')\n",
-    "        "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -274,9 +242,7 @@
    "id": "b0b71e3a-720b-4c55-b505-d327a437ac3b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "scalpdemo.make_timetable(datasets)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -285,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "%%time\n",
     "# THIS NEEDS TO BE TESTED BUT WE RLY NEED THIS:\n",
     "datasets, fnames, runtimes =  scalpdemo.run_all(datasets)\n",
     "runtimes"
@@ -294,13 +260,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f464aad3-18ae-40da-95ec-fd046aa28eae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "scalpdemo.make_timetable(datasets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5b5622a-d72d-4260-9ecb-90df2856220f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for e in datasets:\n",
+    "    if '509' in e.uns['name'] or 'lee' in e.uns['name']:\n",
+    "        print(e)\n",
+    "        scalp.plot2(e, 'BBKNN', 'Scalp: 0.45')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e09e3b88-1470-4920-b58f-c15126a05d3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fnames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1854e5c0-0e64-44b6-972f-d72f81dbcc0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "07309215-5010-4d37-8ce7-4cf6d8823b20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SCIB = scalpdemo.scib_score(fnames, datasets) \n",
-    "SCIB_DATA = pd.read_csv(\"SCIB.csv\")\n",
-    "print(scalpdemo.mkscib_table(SCIB_DATA).to_latex())\n",
+    "# scalpdemo.scib_score(fnames, datasets) \n",
+    "SCIB_DATA = pd.read_csv(\"scib.csv\")\n",
+    "print(scalpdemo.mkscib_table(SCIB_DATA))\n",
     "\n",
     "#latex_table = pd.DataFrame(runtimes).to_latex(index=False, escape=False, caption=\"Economic Terms Dictionary\", label=\"tab:terms\")\n",
     "rts = pd.DataFrame(list(runtimes.items()), columns=[\"Item\", \"Value\"])\n",
@@ -424,17 +434,20 @@
     "######################\n",
     "# SCORE INSTANCES \n",
     "######################\n",
-    "scores = { str(i): scalp.score.scalp_scores(datasets[i],projection = 'methods', label_batch_split=False) for i in lmz.Range(datasets) }\n",
+    "#scores = { str(i): scalp.score.scalp_scores(datasets[i],projection = 'methods', label_batch_split=False) for i in lmz.Range(datasets) }\n",
+    "scores = scalpdemo.scalpscore(datasets) \n",
     "scores"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b71046f-c8f8-4ad3-9f96-4dc1e2d8952c",
+   "id": "095df387-c727-4241-9bc5-d27b7cabf4c3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "scores"
+   ]
   },
   {
    "cell_type": "code",
@@ -444,7 +457,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "for m in scores['0'].keys():\n",
+    "for m in scores[0].keys():\n",
     "    if 'alp' in m: \n",
     "        r9,l9 = scalpdemo.make_results_table(scores, datasets,m)\n",
     "        print(l9)"
@@ -525,6 +538,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b441acd7-5d0b-4ae3-bbda-fda4b9bc14b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "80973ababa91fb5f",
    "metadata": {},
    "outputs": [],
@@ -564,14 +587,6 @@
    "source": [
     "scalpdemo.barplot(geomean, datasets)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "467dd6d0-dcf2-4139-8f23-89292eb9fe0b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1031,7 +1046,58 @@
    "id": "3ff39aa8-e4d9-45bf-b004-643b576358a9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.optimize import curve_fit\n",
+    "\n",
+    "# Data\n",
+    "years = np.array([1990, 1994, 1998, 2002, 2005, 2009, 2013, 2017, 2021, 2025]) # 2025\n",
+    "seat_percentages = np.array([97.4, 95.5, 94.6, 99.7, 91.2, 87.8, 89.8, 77.0, 83.2, 65.6])# 65.6\n",
+    "\n",
+    "# Logistic decay function\n",
+    "def logistic_decay(x, L, k, x0, C):\n",
+    "    return L / (1 + np.exp(k * (x - x0))) + C\n",
+    "\n",
+    "def quadratic(x, a, b, c):\n",
+    "    return a * x**2 + b * x + c\n",
+    "\n",
+    "# Initial guesses for parameters\n",
+    "L_guess = max(seat_percentages) - min(seat_percentages)\n",
+    "k_guess = 0.05\n",
+    "x0_guess = 2010\n",
+    "C_guess = min(seat_percentages)\n",
+    "p0 = [L_guess, k_guess, x0_guess, C_guess]\n",
+    "\n",
+    "p0 = [-.03, 111, -110000]\n",
+    "p0 =[0,0,0]\n",
+    "\n",
+    "# Fit the curve\n",
+    "#params, _ = curve_fit(logistic_decay, years, seat_percentages, p0=p0, maxfev=10000)\n",
+    "func =  quadratic\n",
+    "params, _ = curve_fit(func, years, seat_percentages, p0=p0, maxfev=10000)\n",
+    "\n",
+    "# Predict values\n",
+    "future_years = np.arange(1990, 2040, 1)\n",
+    "predicted_logistic = func(future_years, *params)\n",
+    "\n",
+    "# Plot\n",
+    "plt.figure(figsize=(10,6))\n",
+    "plt.scatter(years, seat_percentages, label=\"Actual seat share\")\n",
+    "plt.plot(future_years, predicted_logistic, '-', label=\"Logistic decay fit\", linewidth=2)\n",
+    "plt.title(\"Seat Share of Centre Parties — Logistic Decay Fit\")\n",
+    "plt.xlabel(\"Election Year\")\n",
+    "plt.ylabel(\"Seat Share (%)\")\n",
+    "plt.ylim(0, 105)\n",
+    "plt.grid(True, linestyle='--', alpha=0.6)\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Example prediction for 2030\n",
+    "predicted_2030_logistic = func(2030, *params)\n",
+    "print(f\"Predicted seat share in 2030 (logistic): {predicted_2030_logistic:.2f}%\")"
+   ]
   }
  ],
  "metadata": {
