experiment checks neighbor overlap

--- a/notebooks/scalp_demo_2.ipynb
+++ b/notebooks/scalp_demo_2.ipynb
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets"
+    "len(datasets)"
    ]
   },
   {
@@ -193,11 +193,12 @@
     "\n",
     "Scalp = scalpdemo.Scalp\n",
     "if True:\n",
-    "    stack = Scalp(dataset)\n",
+    "    stack = Scalp(dataset, ot= .75 )\n",
     "    scalp.plot(stack,'scalp', color=['batch','label'])\n",
     "else:\n",
     "    for d in datasets:\n",
     "        if not d.uns['timeseries']:\n",
+    "        # if 'done_lung' ==  d.uns['name']: # looks normal\n",
     "            stack = Scalp(d)\n",
     "            scalp.plot(stack,'scalp', color=['batch','label'])"
    ]
@@ -279,27 +280,19 @@
     "for e in datasets:\n",
     "    if '509' in e.uns['name'] or 'lee' in e.uns['name']:\n",
     "        print(e)\n",
-    "        scalp.plot2(e, 'BBKNN', 'Scalp: 0.45')\n",
+    "        scalp.plot2(e, 'BBKNN', 'Scalp: 0.75')\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e09e3b88-1470-4920-b58f-c15126a05d3c",
+   "id": "a789f8c0-2eff-44ee-a97a-c1097e206ff3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fnames"
+    "datasets[19].uns['name']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1854e5c0-0e64-44b6-972f-d72f81dbcc0c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -308,14 +301,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# scalpdemo.scib_score(fnames, datasets) \n",
-    "SCIB_DATA = pd.read_csv(\"scib.csv\")\n",
-    "print(scalpdemo.mkscib_table(SCIB_DATA))\n",
+    "# this cell needs some cleaning! \n",
+    "# scalpdemo.scib_score(fnames, datasets, 'scib2.csv')  # we skip done_lung # need to recalc later\n",
+    "SCIB_DATA = pd.read_csv(\"scib2.csv\")\n",
     "\n",
-    "#latex_table = pd.DataFrame(runtimes).to_latex(index=False, escape=False, caption=\"Economic Terms Dictionary\", label=\"tab:terms\")\n",
-    "rts = pd.DataFrame(list(runtimes.items()), columns=[\"Item\", \"Value\"])\n",
-    "latex_table = rts.to_latex()\n",
-    "print(latex_table)\n"
+    "# print(scalpdemo.mkscib_table(SCIB_DATA, datasets))\n",
+    "\n",
+    "scalpdemo.make_results_table(0, datasets,'Scalp: 0.55', df = SCIB_DATA)\n",
+    "\n"
    ]
   },
   {
@@ -326,102 +319,7 @@
    "outputs": [],
    "source": [
     "if False: # this is super slow\n",
-    "    scores_kni = { str(i): scalp.score.kni_scores(datasets[i], projection='methods') for i in lmz.Range(datasets) }\n",
-    "    dff = pd.DataFrame.from_dict(scores_kni, orient='index')\n",
-    "    average_scores = dff.mean().to_latex()\n",
-    "    print(average_scores)\n",
-    "    \n",
-    "'''\n",
-    "scanorama      0.616067\n",
-    "bbknn          0.646266\n",
-    "combat         0.458397\n",
-    "Scalp: 0.15    0.691557\n",
-    "Scalp: 0.25    0.667454\n",
-    "Scalp: 0.35    0.642752\n",
-    "Scalp: 0.45    0.615580\n",
-    "Scalp: 0.55    0.593257\n",
-    "Scalp: 0.75    0.527588\n",
-    "Scalp: 0.85    0.499085\n",
-    "Scalp: 0.95    0.482638\n",
-    "\n",
-    "\n",
-    "# lastest run not that rosy...........\n",
-    "scanorama      0.697316\n",
-    "bbknn          0.730277\n",
-    "combat         0.515334\n",
-    "Scalp: 0.15    0.683468\n",
-    "Scalp: 0.25    0.656524\n",
-    "Scalp: 0.35    0.631032\n",
-    "Scalp: 0.45    0.607354\n",
-    "Scalp: 0.55    0.573127\n",
-    "Scalp: 0.65    0.535592\n",
-    "Scalp: 0.75    0.497753\n",
-    "Scalp: 0.85    0.475295\n",
-    "Scalp: 0.95    0.519884\n",
-    "\n",
-    "\n",
-    "so going with the small dataset  and not filtering shit takes\n",
-    "\\begin{tabular}{lr}\n",
-    "\\toprule\n",
-    " & 0 \\\\\n",
-    "\\midrule\n",
-    "scanorama & 0.591904 \\\\\n",
-    "bbknn & 0.637113 \\\\\n",
-    "combat & 0.466931 \\\\\n",
-    "Scalp: 0.15 & 0.665008 \\\\\n",
-    "Scalp: 0.25 & 0.636216 \\\\\n",
-    "Scalp: 0.35 & 0.608385 \\\\\n",
-    "Scalp: 0.45 & 0.583107 \\\\\n",
-    "Scalp: 0.55 & 0.558317 \\\\\n",
-    "Scalp: 0.65 & 0.528923 \\\\\n",
-    "Scalp: 0.75 & 0.500803 \\\\\n",
-    "Scalp: 0.85 & 0.482103 \\\\\n",
-    "Scalp: 0.95 & 0.497020 \\\\\n",
-    "\\bottomrule\n",
-    "\\end{tabular}\n",
-    "\n",
-    "\n",
-    "big, no filter, \n",
-    "\\begin{tabular}{lr}\n",
-    "\\toprule\n",
-    " & 0 \\\\\n",
-    "\\midrule\n",
-    "scanorama & 0.667613 \\\\\n",
-    "bbknn & 0.701626 \\\\\n",
-    "combat & 0.500828 \\\\\n",
-    "Scalp: 0.15 & 0.662404 \\\\\n",
-    "Scalp: 0.25 & 0.634419 \\\\\n",
-    "Scalp: 0.35 & 0.610253 \\\\\n",
-    "Scalp: 0.45 & 0.587026 \\\\\n",
-    "Scalp: 0.55 & 0.555211 \\\\\n",
-    "Scalp: 0.65 & 0.513821 \\\\\n",
-    "Scalp: 0.75 & 0.477145 \\\\\n",
-    "Scalp: 0.85 & 0.455892 \\\\\n",
-    "Scalp: 0.95 & 0.503966 \\\\\n",
-    "\\bottomrule\n",
-    "\\end{tabular}\n",
-    "\n",
-    "# big filter 15\n",
-    "\\begin{tabular}{lr}\n",
-    "\\toprule\n",
-    " & 0 \\\\\n",
-    "\\midrule\n",
-    "scanorama & 0.697316 \\\\\n",
-    "bbknn & 0.730277 \\\\\n",
-    "combat & 0.515334 \\\\\n",
-    "Scalp: 0.15 & 0.683468 \\\\\n",
-    "Scalp: 0.25 & 0.656524 \\\\\n",
-    "Scalp: 0.35 & 0.631032 \\\\\n",
-    "Scalp: 0.45 & 0.607354 \\\\\n",
-    "Scalp: 0.55 & 0.573127 \\\\\n",
-    "Scalp: 0.65 & 0.535592 \\\\\n",
-    "Scalp: 0.75 & 0.497753 \\\\\n",
-    "Scalp: 0.85 & 0.475295 \\\\\n",
-    "Scalp: 0.95 & 0.519884 \\\\\n",
-    "\\bottomrule\n",
-    "\\end{tabular}\n",
-    "'''\n",
-    "\n"
+    "    scalpdemo.kni( [d for d,f in zip(datasets,scalpdemo.get_is_ts(datasets)) if not f ]  )"
    ]
   },
   {
@@ -442,21 +340,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "095df387-c727-4241-9bc5-d27b7cabf4c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "384e115a-513d-4690-8f8b-6a2b6c0265f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "%%time \n",
     "for m in scores[0].keys():\n",
     "    if 'alp' in m: \n",
     "        r9,l9 = scalpdemo.make_results_table(scores, datasets,m)\n",
@@ -506,14 +394,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68c124ee-2625-4476-9491-136f614a1e01",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "30e0fed5-1747-45ea-98f8-b777550f85fe",
    "metadata": {},
    "outputs": [],
@@ -538,22 +418,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b441acd7-5d0b-4ae3-bbda-fda4b9bc14b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scores2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "80973ababa91fb5f",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "scalpdemo.bluestar(scores2) \n"
+    "scalpdemo.bluestar(scores2) \n",
+    "bb,tt = scalpdemo.split_sc2(scores2,datasets)\n",
+    "scalpdemo.bluestar(bb) \n",
+    "scalpdemo.bluestar(tt) "
    ]
   },
   {
@@ -603,8 +476,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.set_option('display.max_rows', 1000) \n",
-    "df_melted"
+    "pd.set_option('display.max_rows', 1000) "
    ]
   },
   {
