--- a/notebooks/scalp_demo_2.ipynb
+++ b/notebooks/scalp_demo_2.ipynb
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(datasets)"
+    "datasets"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[d.uns['timeseries'] for d in datasets]"
+    "sum([d.uns['timeseries'] for d in datasets])"
    ]
   },
   {
@@ -192,15 +192,24 @@
     "%%time\n",
     "\n",
     "Scalp = scalpdemo.Scalp\n",
-    "if True:\n",
-    "    stack = Scalp(dataset, ot= .75 )\n",
-    "    scalp.plot(stack,'scalp', color=['batch','label'])\n",
-    "else:\n",
+    "plot = '4'\n",
+    "\n",
+    "if plot == '4':\n",
+    "        stax = [ Scalp(dataset.copy(), ot= e/100 ) for e in [10,40, 70, 90] ]\n",
+    "        scalp.plot4(stax, label = 'label', headline = 'idk what this is :) ', plotnames = 'ABCD')\n",
+    "        scalp.plot4(stax, label = 'batch', headline = 'batches!!!', plotnames = 'ABCD')\n",
+    "if plot == 'default':\n",
+    "        stack = Scalp(dataset, ot= .75 )\n",
+    "        scalp.plot(stack,'scalp', color=['batch','label'])      \n",
+    "        scalp.plot4(stax, label = 'batch', headline = 'this is the batches', plotnames = 'ABCD')\n",
+    "\n",
+    "if plot == 'allts':\n",
     "    for d in datasets:\n",
     "        if not d.uns['timeseries']:\n",
     "        # if 'done_lung' ==  d.uns['name']: # looks normal\n",
     "            stack = Scalp(d)\n",
-    "            scalp.plot(stack,'scalp', color=['batch','label'])"
+    "            scalp.plot(stack,'scalp', color=['batch','label'])\n",
+    "            "
    ]
   },
   {
