greatly improved plots

--- a/notebooks/scalp_demo_2.ipynb
+++ b/notebooks/scalp_demo_2.ipynb
@@ -3,10 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d11c30c-1e7b-4bbc-aaf7-b6989c2afe66",
+   "id": "48854ba9-e0e6-4a37-add4-884ed9851bdc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "%load_ext autoreload\n",
     "%matplotlib inline\n",
     "%autoreload 2\n",
@@ -60,7 +61,9 @@
    "id": "3e96b637-db8a-4b74-be10-baf86fab483e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "figpath = '/home/ubuntu/scalpplot/'"
+   ]
   },
   {
    "cell_type": "code",
@@ -70,7 +73,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "datasets, dataset = scalpdemo.get_data()\n",
+    "datasets, dataset = scalpdemo.get_data(config = 2)\n",
     "\n"
    ]
   },
@@ -196,8 +199,12 @@
     "\n",
     "if plot == '4':\n",
     "        stax = [ Scalp(dataset.copy(), ot= e/100 ) for e in [10,40, 70, 90] ]\n",
-    "        scalp.plot4(stax, label = 'label', headline = 'idk what this is :) ', plotnames = 'ABCD')\n",
-    "        scalp.plot4(stax, label = 'batch', headline = 'batches!!!', plotnames = 'ABCD')\n",
+    "        fig = scalp.plot4_2x2(stax, label = 'label', headline = 'Threshold -- Labels', plotnames = 'ABCD', colors = 1)\n",
+    "        fig.savefig(figpath+'threshEx.png', dpi=300,bbox_inches='tight')\n",
+    "        fig = scalp.plot4_2x2(stax, label = 'batch', headline = 'Treshold -- batches', plotnames = 'ABCD', colors = 0)\n",
+    "        fig.savefig(figpath+'threshExBatch', dpi=300,bbox_inches='tight')\n",
+    "\n",
+    "\n",
     "if plot == 'default':\n",
     "        stack = Scalp(dataset, ot= .75 )\n",
     "        scalp.plot(stack,'scalp', color=['batch','label'])      \n",
@@ -210,6 +217,47 @@
     "            stack = Scalp(d)\n",
     "            scalp.plot(stack,'scalp', color=['batch','label'])\n",
     "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75762955-d555-4e61-a200-76aae1437035",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55f8a76d-e7f2-4fe1-b89d-332617cadf65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, asd in enumerate(datasets):\n",
+    "    print(i, asd.uns['name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e2f8129-ea70-43ec-840d-cfcc630b4ff0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for i, asd in enumerate(datasets):\n",
+    "    if  'lee_natgenet' in asd.uns['name']: \n",
+    "        zz =  Scalp(asd.copy(), ot= .45 ) \n",
+    "        zz = scalp.mnn.bbknnwrap(zz, dim =2) \n",
+    "        fig = scalp.plot2_2x2(zz, 'BBKNN', 'scalp')\n",
+    "        fig.savefig(figpath+'batch_example.png', dpi=300, bbox_inches='tight')\n",
+    "for i, asd in enumerate(datasets):\n",
+    "    if  '509' in asd.uns['name']: \n",
+    "        zz =  Scalp(asd.copy(), ot= .45 ) \n",
+    "        zz = scalp.mnn.bbknnwrap(zz, dim =2) \n",
+    "        fig = scalp.plot2_2x2(zz, 'BBKNN', 'scalp')\n",
+    "        fig.savefig(figpath+'ts_example.png', dpi=300, bbox_inches='tight')\n"
    ]
   },
   {
@@ -275,7 +323,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "scalpdemo.make_timetable(datasets)"
+    "#scalpdemo.make_timetable(datasets) -> moved to scalp tables now "
    ]
   },
   {
@@ -924,11 +972,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ff39aa8-e4d9-45bf-b004-643b576358a9",
+   "id": "d3eb6921-7fce-4f36-9d01-cefb2b6b3b19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "# import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.optimize import curve_fit\n",
     "\n",
